--- a/1. 数学基础.md
+++ b/1. 数学基础.md
@@ -16,5 +16,5 @@
 
 #### 3. 矩阵求逆
 
-![截屏2021-05-06下午12.22.20](/Users/zhuhongyu/Library/Application Support/typora-user-images/截屏2021-05-06下午12.22.20.png)
+<img width="472" alt="截屏2021-06-03下午7 16 08" src="https://user-images.githubusercontent.com/26454305/120636385-2afd8000-c4a0-11eb-80b8-3c4ee7733031.png">
 
