--- a/补充：常见问题.md
+++ b/补充：常见问题.md
@@ -2,7 +2,7 @@
 
 **过拟合-高方差， 欠拟合-高偏差**
 
-![方差偏差](/Users/zhuhongyu/Library/Mobile Documents/com~apple~CloudDocs/机器学习组内会议/图片/方差偏差.jpg)
+<img width="458" alt="截屏2021-06-03下午7 18 05" src="https://user-images.githubusercontent.com/26454305/120636641-6f891b80-c4a0-11eb-99d9-43fe8bf3303c.png">
 
 **过拟合产生因素：**
 
