--- a/10. BERT.md
+++ b/10. BERT.md
@@ -33,7 +33,7 @@ $BERT_{large}: L = 24, H=1024, Head=16, Parameters = 340M$
 
 #### 4. BERT的Embedding（输入形式）
 
-<img src="/Users/zhuhongyu/Library/Application Support/typora-user-images/截屏2021-06-03下午6.39.06.png" alt="截屏2021-06-03下午6.39.06" style="zoom:50%;" />
+<img width="480" alt="截屏2021-06-03下午7 19 19" src="https://user-images.githubusercontent.com/26454305/120636761-9b0c0600-c4a0-11eb-8607-42e81ba300e2.png">
 
 BERT的embedding由三部分**随机生成可训练的**的embeding构成构成：
 
